@@ -3,26 +3,28 @@ package com.devtoolkit.stringutils;
 /**
  * StringUtils – provides common string manipulation utilities.
  *
- * <p>All methods are stateless and thread-safe.</p>
+ * <p>
+ * All methods are stateless and thread-safe.
+ * </p>
  *
- * @author  DevToolkit Contributors
+ * @author DevToolkit Contributors
  * @version 1.0.0
  */
 public class StringUtils {
 
     // Prevent instantiation – utility class
-    private StringUtils() {}
+    private StringUtils() {
+    }
 
     /**
      * Reverses the characters of the given string.
      *
-     * @param input the string to reverse; must not be {@code null}
-     * @return the reversed string
-     * @throws IllegalArgumentException if {@code input} is {@code null}
+     * @param input the string to reverse; may be {@code null}
+     * @return the reversed string, or {@code null} if {@code input} is {@code null}
      */
     public static String reverse(String input) {
         if (input == null) {
-            throw new IllegalArgumentException("Input string must not be null.");
+            return null;
         }
         return new StringBuilder(input).reverse().toString();
     }
@@ -46,16 +48,17 @@ public class StringUtils {
     }
 
     /**
-     * Removes leading, trailing, and consecutive embedded whitespace from the given string,
+     * Removes leading, trailing, and consecutive embedded whitespace from the given
+     * string,
      * collapsing multiple spaces between words into a single space.
      *
-     * @param input the string to normalise; must not be {@code null}
-     * @return the normalised string
-     * @throws IllegalArgumentException if {@code input} is {@code null}
+     * @param input the string to normalise; may be {@code null}
+     * @return the normalised string, or {@code null} if {@code input} is
+     *         {@code null}
      */
     public static String removeExtraSpaces(String input) {
         if (input == null) {
-            throw new IllegalArgumentException("Input string must not be null.");
+            return null;
         }
         return input.trim().replaceAll("\\s+", " ");
     }
@@ -81,10 +84,10 @@ public class StringUtils {
     /**
      * Checks whether the given string is blank (null, empty, or whitespace-only).
      *
-     * @param input the string to check
+     * @param s the string to check
      * @return {@code true} if blank
      */
-    public static boolean isBlank(String input) {
-        return input == null || input.isBlank();
+    public static boolean isBlank(String s) {
+        return s == null || s.trim().isEmpty();
     }
 }
